# Maxwells_Flux_Difference

./: .gitignore  CMakeLists.txt  README.md  Source.cpp  SourceConfig.h.in
meshes/: CMakeLists.txt  MeshConstruction2D.cpp  MeshConstruction2D.h  MeshConstruction3D.cpp  MeshConstruction3D.h
src/: CMakeLists.txt  Compilation2D.cpp  Compilation2D.h  Compilation3D.cpp  Compilation3D.h
struct/: CMakeLists.txt  complexNumber.h  crossSectionArray3D.h  elementArray2D.h  nodeArray2D.h  nodeArray3D.h  tetrahedronArray3D.h
utils/: CMakeLists.txt  Computation2D.cpp  Computation2D.h  Computation3D.cpp  Computation3D.h  Initialization2D.cpp  Initialization2D.h  Initialization3D.cpp  Initialization3D.h
von_Neumann_Stability_Analysis/: .gitignore  AmplificationFactor_2D_Analytic.txt  AmplificationFactor_2D_grid40.csv  AmplificationFactor_2D_grid60.csv  AmplificationFactor_2D_grid80.csv  AmplificationFactor_3D_Analytic.txt  AmplificationFactor_3D_grid40.csv  AmplificationFactor_3D_grid60.csv  AmplificationFactor_3D_grid80.csv  Modelling_2D.py  Modelling_3D.py
